Changes: Dockerized, basic working flow
